tests/paczka1/small_fuzzy/57172824.err
Error in line 1: S819 A519 78,7
Error in line 6: sqBOouJl959 S699 -2,5
